Add formatting support to language server completer
